plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.1'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.innowise'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}
def mapstructVersion = '1.5.3.Final'
def springBootStarterVersion = '3.0.1'
def springSecurityTestVersion = '6.0.1'
def openapiStarterWebmvcVersion = '2.0.2'
def jsonwebtokenVersion = '0.11.5'
dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.mapstruct:mapstruct:' + mapstructVersion
    annotationProcessor 'org.mapstruct:mapstruct-processor:' + mapstructVersion
    implementation 'org.springframework.boot:spring-boot-starter-validation:' + springBootStarterVersion
    implementation 'org.springframework.boot:spring-boot-starter-security:' + springBootStarterVersion
    testImplementation 'org.springframework.security:spring-security-test:' + springSecurityTestVersion
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:' + openapiStarterWebmvcVersion
    implementation 'io.jsonwebtoken:jjwt-api:' + jsonwebtokenVersion
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:' + jsonwebtokenVersion
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:' + jsonwebtokenVersion
    implementation group: 'org.flywaydb', name: 'flyway-core', version: '9.14.1'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.1.1'
    testImplementation 'com.h2database:h2:2.1.214'



}

tasks.named('test') {
    useJUnitPlatform()
}
